src/objects/Portal_Property__c.object
<CustomObject>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Setting__c</fullName>
        <label>Portal Setting</label>
        <referenceTo>Portal_Settings__c</referenceTo>
        <relationshipLabel>Portal Property</relationshipLabel>
        <relationshipName>Portal_Property</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>Portal Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Portal_Setting__c</columns>
        <columns>Key__c</columns>
        <columns>Value__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Portal Propertys Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Property</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>